--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
     checkMissingIterableValueType: false
     ignoreErrors:
-        #- '#Cannot call method end\(\) on Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface\|null.#'
+        - '#Cannot call method .*\(\) on Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface\|null.#'
         - '#Unsafe usage of new static\(\).#'
+        # Ignore errors from JsonDeserializer not implemented methods
+        - '#Keboola\\AzureStorageTableExtractor\\JsonDeserializer#'
