--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,5 +5,6 @@ parameters:
         - '#Unsafe usage of new static\(\).#'
         - '#Access to an undefined property object::\$PartitionKey.#'
         - '#Access to an undefined property object::\$RowKey.#'
+        - '#Argument of an invalid type object supplied for foreach, only iterables are supported.#'
         # Ignore errors from JsonDeserializer not implemented methods
         - '#Keboola\\AzureStorageTableExtractor\\JsonDeserializer#'
